--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Joker's Blog
 SEOTitle: Joker的博客 | Joker
-header-img: img/home-bg.jpg
+header-img: img/home-header-bg.jpg
 email: jokerh@foxmail.com
 description: "Joker's blog"
 keyword: "Joker"
