--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Joker's Blog
-SEOTitle: Joker的博客 | Joker
+SEOTitle: Joker's Blog
 header-img: img/home-header-bg.jpg
 email: jokerh@foxmail.com
 description: "Joker's blog"
@@ -30,7 +30,7 @@ paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
-#timezone: CN  
+timezone: CN  
 
 
 
@@ -78,7 +78,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
+sidebar-about-description: "好好学习，天天敲代码"
 sidebar-avatar: /img/avatar-joker.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
